syntax = "proto3";

package test.extensions.filters.http;

import "test/fuzz/common.proto";

import "validate/validate.proto";

message FilterFuzzTestCase {
  int32 filter_index = 1;

  test.fuzz.HttpData data = 2;
}
